--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="spacing_xsmall">8dp</dimen>
     <dimen name="spacing_medium">16dp</dimen>
+    <dimen name="list_divider_height">1dp</dimen>
 </resources>
