--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,11 @@
     <dimen name="spacing_xsmall">8dp</dimen>
     <dimen name="spacing_medium">16dp</dimen>
     <dimen name="list_divider_height">1dp</dimen>
+    <dimen name="todo_edit_app_bar_height">144dp</dimen>
+    <dimen name="todo_edit_margin_bottom">32dp</dimen>
+    <dimen name="todo_edit_font_size">29sp</dimen>
+    <dimen name="todo_edit_margin_top">44dp</dimen>
+    <dimen name="todo_edit_body_margin_top">28dp</dimen>
+    <dimen name="spacing_small">12dp</dimen>
+    <dimen name="todo_edit_body_font_size">17sp</dimen>
 </resources>
